--- a/Templates/angular-template/index.html
+++ b/Templates/angular-template/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp" ng-cloak>
 <head>
-    <title>Snake</title>
+    <title></title>
     <!-- used for responsive design. So that the site looks the same for all screens: -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
